// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid renders without crashing 1`] = `
<DocumentFragment>
  <div
    class="widget-datagrid-grid table"
    role="grid"
    style="--widgets-grid-template-columns: minmax(auto, 1fr) minmax(auto, 1fr) 54px;"
  >
    Test
  </div>
</DocumentFragment>
`;

exports[`Grid renders without selector column 1`] = `
<DocumentFragment>
  <div
    class="widget-datagrid-grid table"
    role="grid"
    style="--widgets-grid-template-columns: minmax(auto, 1fr) minmax(auto, 1fr);"
  >
    Test
  </div>
</DocumentFragment>
`;
